# snapdraft

server/: .gitignore  README.md  conftest.py  pyproject.toml
server/snapdraft_server/: logging_config.json  main.py
server/snapdraft_server/core/: default_doc_generator.py  default_doc_generator_test.py  doc_generator.py  doc_section.py  doc_section_test.py  doc_template.py  doc_template_test.py  dspy_check.py  hardcoded_template.py
server/snapdraft_server/dspy_helpers/: typed_predictor_signature.py
server/snapdraft_server/routes/: app_fixture.py  app_setup.py  dependencies.py  document_type_routes.py  document_type_routes_test.py  file_routes.py  file_routes_test.py  generator_routes.py
server/snapdraft_server/services/: doc_type_model.py  doc_type_service.py  draft_model.py  draft_service.py  file_model.py  file_service.py  model_model.py  model_service.py
server/snapdraft_server/services/base/: base_collection.py  mock_gridfs.py  result_list.py  snapdraft_mongo.py
server/snapdraft_server/util/: util.py
ui/: README.md  index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx
ui/src/app/: layout.tsx  no_doc_type.tsx
ui/src/app/document/: page.tsx
ui/src/app/drafts/: CreateEditDraft.tsx  DraftsList.tsx  ViewDraft.tsx  page.tsx
ui/src/app/editor/: Editor.css  Editor.tsx  page-old.tsx  page.tsx
ui/src/app/login/: page.tsx
ui/src/app/training/: ModelsList.tsx  page.tsx
ui/src/components/: DraftCombobox.tsx  FileEditor.tsx  Login.tsx
ui/src/components/TopNav/: DocumentDropdown.tsx  (+1 more)
ui/src/lib/: apiClient.ts
ui/src/styles/: globals.css
